<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasien_page"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="115dp"
        android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/btn_doktorlistuser"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/doktor_list"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_antrianlistuser"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/antrian_list"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_bookinguser"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/booking_list"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_changeprofile"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/change_profile"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>

</LinearLayout>