<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_register_email"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_register_firstname"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_register_lastname"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_register_hari"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/hari"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_register_bulan"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/bulan"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/edt_register_tahun"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/tahun"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="15dp"
            android:singleLine="true"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edt_register_alamat"
            android:layout_width="250dp"
            android:layout_height="46dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/alamat"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_register_departement"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/departement"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Register"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/blue"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>