<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/antrian_sekarang"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:layout_marginBottom="30dp" />
    <TextView
        android:id="@+id/jumlahsekarang"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tunggu_sebentar"
        android:textSize="25sp"
        android:layout_marginBottom="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="30dp"
        android:text="@string/jumlah_antrian"
        android:textSize="25sp"
        android:layout_marginBottom="30dp" />
    <TextView
        android:id="@+id/jumlahantrian"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tunggu_sebentar"
        android:textSize="25sp"
        android:layout_marginBottom="30dp" />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"/>
    <Button
        android:id="@+id/btn_zero"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
</LinearLayout>