<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:text="@string/dokter_page"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_antrianlistdokter"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:text="@string/antrian"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_changeprofile"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/change_profile"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"/>
</LinearLayout>