<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNamaDokter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/tvDepartementDokter"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/departement"
                android:textSize="15sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_addthisdocterantrian"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/booking_dokter"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@color/blue"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>