<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="15dp"
            android:singleLine="true"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="15dp"
            android:singleLine="true"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/blue"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_toregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/blue"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>