<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="696dp"
        android:layout_margin="16dp"
        android:textAlignment="center">

        <EditText
            android:id="@+id/edt_register_email"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:drawableRight="@drawable/email_icon"
            android:fontFamily="sans-serif-black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginBottom="136dp"
            android:drawableRight="@drawable/lock_icon"
            android:fontFamily="sans-serif-black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_bulan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_register_firstname"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_hari"
            app:layout_constraintEnd_toStartOf="@+id/edt_register_lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />

        <EditText
            android:id="@+id/edt_register_lastname"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_hari"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.908"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password"
            app:layout_constraintVertical_bias="0.529" />

        <EditText
            android:id="@+id/edt_register_hari"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hari"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_bulan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password"
            app:layout_constraintVertical_bias="0.832" />

        <EditText
            android:id="@+id/edt_register_bulan"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/bulan"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_tahun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_register_tahun"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/tahun"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_register_alamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_register_alamat"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginBottom="72dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/alamat"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/Register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_tologin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_tologin"
            android:layout_width="171dp"
            android:layout_height="43dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="sans-serif"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>